# geoquery

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  EVALS.md  README.md  SELF_IMPROVEMENT.md  agent.py  cli.py  config.py  contracts.py  docker-compose.yml  feedback.py  mcp_server.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: meta-agent-cron.yml  meta-agent-gate.yml  meta-agent-measure.yml  regression.yml
briefs/: example_glossier_dtc_beauty.md  example_hubspot_smb_crm.md  example_linear_b2b_saas_project_mgmt.md  example_notion_b2b_saas_knowledge_mgmt.md  example_patagonia_dtc_outdoor.md  example_stripe_payments_fintech.md  example_vercel_frontend_cloud.md  example_webflow_nocode_design.md
dashboard/: __init__.py  app.py  data.py
dashboard/pages/: 1_Evals.py  2_Costs.py  3_Tools.py  4_Drift.py  5_Review_Queue.py  6_Learning_Curve.py
data/: episodic.demo.db
docs/: AGENT_PROJECT_PLAYBOOK.md  linkedin_post.md  meta_agent_pr_template.md  regression_gate_demo.md  streamlit_cloud_deploy.md
evals/: __init__.py  deterministic.py  golden_set.py  model_graded.py  production.py  regression.py  rubric_loader.py  winning_patterns.py
evals/proposed/: __init__.py
evals/rubrics/: brand_voice_match.md  brief_actionability.md  brief_specificity.md  buyer_realism.md  search_intent_alignment.md
guardrails/: __init__.py  limits.py
memory/: __init__.py  episodic.py  schema.sql  semantic.py
meta/: __init__.py  analyze.py  baseline.json  baseline.py  edit_surface.py  gate.py  github_pr.py  measure.py  meta_evals.py  propose.py  run.py  stats.py
regression_dataset/airbnb_marketplace/: cassette.json  input.json
regression_dataset/allbirds_dtc_apparel/: cassette.json  input.json
regression_dataset/asana_pm/: cassette.json  input.json
regression_dataset/atlassian_devtools/: cassette.json  input.json
regression_dataset/canva_design/: cassette.json  input.json
regression_dataset/casper_dtc_mattress/: cassette.json  input.json
regression_dataset/coursera_edtech/: cassette.json  input.json
regression_dataset/doordash_marketplace/: cassette.json  input.json
regression_dataset/duolingo_edtech/: cassette.json  input.json
regression_dataset/figma_design/: cassette.json  input.json
regression_dataset/github_devplatform/: cassette.json  input.json
regression_dataset/glossier_dtc_beauty/: cassette.json  input.json
regression_dataset/hubspot_smb_crm/: cassette.json  input.json
regression_dataset/linear_b2b_saas/: cassette.json  input.json
regression_dataset/mailchimp_email/: cassette.json  input.json
regression_dataset/miro_whiteboard/: cassette.json  input.json
regression_dataset/notion_b2b_saas/: cassette.json  expected.json  input.json
regression_dataset/one_medical_healthtech/: cassette.json  input.json
regression_dataset/patagonia_dtc_outdoor/: cassette.json  input.json
regression_dataset/peloton_fitness/: cassette.json  input.json
regression_dataset/shopify_ecommerce/: cassette.json  input.json
regression_dataset/slack_messaging/: cassette.json  input.json
regression_dataset/squarespace_websites/: cassette.json  input.json
regression_dataset/stripe_payments/: cassette.json  expected.json  input.json
regression_dataset/teladoc_healthtech/: cassette.json  input.json
scripts/: build_demo_db.py  regression_summary.py
skills/: __init__.py  analyze_serp.py  base.py  define_icp.py  draft_content_brief.py  generate_geo_query_list.py  predict_outcome.py  research_company.py  score_queries.py  select_priority_query.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_agent_e2e.py  test_contracts.py  test_dashboard_data.py  test_evals_deterministic.py  test_evals_golden.py  test_evals_judge_actionability.py  test_evals_judge_brand_voice.py  test_evals_judge_search_intent.py  test_evals_model_graded.py  test_evals_production_drift.py  test_evals_production_sampler.py  test_evals_regression.py  test_evals_rubric_loader.py  test_evals_winning_patterns.py  test_feedback.py  test_guardrails_limits.py  test_mcp_server.py  test_memory_episodic.py  test_memory_semantic.py  test_meta_analyze.py  test_meta_baseline.py  test_meta_edit_surface.py  test_meta_evals.py  test_meta_gate.py  test_meta_github_pr.py  test_meta_measure.py  test_meta_propose.py  test_meta_run.py  test_meta_stats.py  test_regression.py  test_regression_record.py  test_regression_record_live.py  test_regression_summary.py  test_skill_analyze_serp.py  test_skill_define_icp.py  test_skill_draft_content_brief.py  test_skill_generate_geo_query_list.py  test_skill_predict_outcome.py  test_skill_research_company.py  (+7 more)
tools/: __init__.py  dataforseo.py  sitemap_parser.py  web_fetch.py  web_search.py
(+55 files in other folders)
