[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoquery"
version = "0.1.0"
description = "GEO Query → Content Brief Agent (cluster anchor)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lukasz Strycharz" }]
# Core deps are everything chunks 1–6 need (skills + episodic memory + CLI + evals).
dependencies = [
    "anthropic==0.101.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "typer==0.25.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
# Chunk 7: semantic memory.
semantic = [
    "sqlite-vec==0.1.6",
    # fastembed 0.4.2 declares incompatibility with Python 3.13 (it pins
    # tokenizers to a version that lacks 3.13 wheels). 0.5.1 is the smallest
    # version with 3.13 support; verified locally to keep the HashEmbedder
    # contract unchanged.
    "fastembed==0.5.1",
]
# Chunk 10+12: page-content extraction and sitemap parsing.
web = [
    "readability-lxml==0.8.1",
    "lxml==5.3.0",
    # lxml 5.2+ split `lxml.html.clean` into its own package; readability-lxml
    # still imports from the old path, so we pull the split package in
    # explicitly. Caught by fresh CI; local installs satisfied this from a
    # transitive cache.
    "lxml_html_clean==0.4.4",
]
# Chunk 13: HTML eval reports.
report = ["jinja2==3.1.4"]
# Chunk 16: MCP server.
mcp = ["mcp==1.1.2"]
# v2 Chunk 1: Streamlit dashboard reading data/episodic.db.
dashboard = [
    "streamlit==1.40.2",
    "pandas==2.2.3",
]
# Dev tooling.
dev = [
    "pytest==9.0.3",
    # pytest-asyncio 0.24.0 pins pytest<9 (caught by CI's fresh resolver on
    # ubuntu+py3.13). 1.3.0 is the smallest version compatible with pytest 9.
    "pytest-asyncio==1.3.0",
    "ruff==0.8.4",
    "pre-commit==4.0.1",
]
# Convenience: everything.
all = [
    "geoquery[semantic,web,report,mcp,dashboard,dev]",
]

[project.scripts]
geoquery = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skills", "tools", "memory", "evals", "guardrails", "dashboard"]
include = [
    "agent.py",
    "cli.py",
    "config.py",
    "contracts.py",
    "mcp_server.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# v2 chunk 4: default `pytest` runs everything except the recording tiers and
# the full regression tier. Smoke is in by default so everyday `pytest` gives
# confidence the regression harness works (~7s of the run). Full + record are
# opt-in via explicit `-m`.
addopts = "-m 'not regression_record and not regression_full and not regression_record_live'"
markers = [
    "regression_smoke: pre-commit regression tier (~5 cases, <10s, runs in default pytest)",
    "regression_full: PR-CI regression tier (~25 cases, <35s, opt-in via -m)",
    "regression_record: cassette-recording with FakeAnthropicClient (manual; free)",
    "regression_record_live: cassette-recording with REAL Anthropic API (manual; ~$0.50/case)",
]
